<resources>
    <string name="app_name">Drawing with Eric and Lisa</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name= "about_message">This is an app was create for La Salle\'s 349 Mobile Computing as a final project.
    The app was made by Eric Frazier and Lisa Toledo. Many long hours went into this app,
        because the creators had no idea how to use
        the canvas or paint class in order to make something worthwhile.</string>

    <string name= "howtostring">In order to use this app, all you need to do is select a color from the bottom view if using a phone,
    if you are on a tablet the colors will be on the left side of the app.
    You can also change the brush size and when you are using an eraser you can change the brush size of that as well.
    You can change the opacity by clicking on the circle gradient at the top on a phone, and it will be on the left if using a tablet.
    Other features of the app are: saving, creating a blank page, and being able to view many different colors with the color picker</string>
    <string name= "howto"> How To </string>

    <string name = "about_string">About</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>

    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="colorPicker">colorPicker</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="githubBtn"></string>
    <string name="colorLibBtn"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
